haciendo lo de flaskqlalchemy

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 sqlalchemy = "==1.3.23"
 eralchemy = "*"
 flask = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.6.1"
